src/compiler/tests/snapshots/frontend_tests__lexer_binary_expression.snap
---
source: tests/frontend_tests.rs
expression: tokens
---
[
    "keyword:let",
    "identifier:y",
    "=",
    "identifier:x",
    "+",
    "float_literal:5.0",
    ";",
]
