src/compiler/tests/snapshots/frontend_tests__lexer_simple_let.snap
---
source: tests/frontend_tests.rs
expression: tokens
---
[
    "keyword:let",
    "identifier:x",
    "=",
    "integer_literal:10",
    ";",
]
