src/compiler/tests/snapshots/frontend_tests__parser_binary_expression.snap
---
source: tests/frontend_tests.rs
expression: ast
---
[
    Statement(
        Let {
            name: "y",
            value: Binary {
                op: "+",
                lhs: Identifier(
                    "x",
                ),
                rhs: Float(
                    5.0,
                ),
            },
        },
    ),
]
