src/compiler/tests/snapshots/frontend_tests__parser_simple_let.snap
---
source: tests/frontend_tests.rs
assertion_line: 25
expression: ast
---
[
    Statement(
        Let {
            name: "x",
            mutable: false,
            type_annotation: None,
            value: Some(
                IntegerLiteral(
                    10,
                ),
            ),
        },
    ),
]
