src/compiler/tests/snapshots/frontend_tests__semantic_binary_expression.snap
---
source: tests/frontend_tests.rs
assertion_line: 53
expression: result
---
Ok(
    (
        "Semantic analysis completed successfully",
        [
            Statement(
                Let {
                    name: "x",
                    mutable: false,
                    type_annotation: None,
                    value: Some(
                        IntegerLiteral(
                            10,
                        ),
                    ),
                },
            ),
            Statement(
                Let {
                    name: "y",
                    mutable: false,
                    type_annotation: None,
                    value: Some(
                        Binary {
                            op: Add,
                            left: Identifier(
                                "x",
                            ),
                            right: FloatLiteral(
                                5.0,
                            ),
                            ty: None,
                        },
                    ),
                },
            ),
        ],
    ),
)
