src/compiler/tests/snapshots/frontend_tests__semantic_redeclaration.snap
---
source: tests/frontend_tests.rs
assertion_line: 63
expression: result
---
Err(
    "Error: Variable `x` is already defined in this scope.",
)
