src/compiler/tests/snapshots/frontend_tests__semantic_simple_let.snap
---
source: tests/frontend_tests.rs
assertion_line: 43
expression: result
---
Ok(
    (
        "Semantic analysis completed successfully",
        [
            Statement(
                Let {
                    name: "x",
                    mutable: false,
                    type_annotation: None,
                    value: Some(
                        IntegerLiteral(
                            10,
                        ),
                    ),
                },
            ),
        ],
    ),
)
