src/compiler/tests/snapshots/frontend_tests__semantic_undeclared_variable.snap
---
source: tests/frontend_tests.rs
expression: result
---
Err(
    "Error: Use of undeclared variable `x`.",
)
